--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta name="viewport" charset="uft-8" content="width=device-width" initial-scale="1.0">
-        <title>GOOD NIGHT SANDRA</title>
+        <title>SANDY BAE</title>
     </head>
     <body>
-        <div class="nav" ><div id="plank"><marquee behavior="alternate">from umar</marquee></div></div>
+        <div class="nav" ><div id="plank"><marquee behavior="alternate">SANDY LABS</marquee></div></div>
         <br><br>
         <h1>
             hello,good evening dia sandra
